# Proyecto_final_2026-1

BMX_COWBOY_BEBOOP/: CMakeLists.txt  acantilado.cpp  acantilado.h  aceite.cpp  aceite.h  bache.cpp  bache.h  barrera.cpp  barrera.h  bmx.cpp  bmx.h  bmx.ui  carrera.cpp  carrera.h  carrera.ui  corredor.cpp  corredor.h  corredor_bmx.cpp  corredor_bmx.h  enemigo.cpp  enemigo.h  jugadorbmx.cpp  jugadorbmx.h  mainwindow.cpp  mainwindow.ui  mapa.txt  nitro.cpp  nitro.h  obstaculo.cpp  obstaculo.h  pista.cpp  pista.h  rampa.cpp  rampa.h  rampa_bmx.cpp  rampa_bmx.h  recursos.qrc  truco.cpp  truco.h
Informes/: Primer momento Proyecto final.docx
